--- a/src2/00.md
+++ b/src2/00.md
@@ -9,7 +9,7 @@ author:
   affiliation: Boston University
   email:       hwwu@bu.edu
 date: \today
-documentclass: jfp1
+documentclass: sigplanconf
 classoption:
     - compmod
 biblio-style: jfp
