--- a/bu_ece_thesis/bu_ece_thesis.sty
+++ b/bu_ece_thesis/bu_ece_thesis.sty
@@ -235,7 +235,7 @@
 \BU\\
 \GRS\par\vfill
 \ifthenelse{\boolean{proposal}}
-	{\ifcase\degree\or Thesis Proposal \or Dissertation Proposal \or Dissertation Proposal \fi\par\vfill}
+	{\ifcase\degree\or Thesis Prospectus \or Dissertation Prospectus \or Dissertation Prospectus \fi\par\vfill}
 	{\ifcase\degree\or Thesis \or Dissertation \or Dissertation \fi\par\vfill}
 \MakeUppercase{{\bf \@title}}\par\vfill
 by\par\vfill
