--- a/bu_ece_thesis/bu_ece_thesis.sty
+++ b/bu_ece_thesis/bu_ece_thesis.sty
@@ -70,8 +70,8 @@
 % margins should be 1in. The measures below are always added to 1in
 
 \hoffset = 0pt                 % Additional offset to the hidden 1in
-%\voffset = 0
-\voffset = -12pt               % at left and on top
+\voffset = 0pt
+% \voffset = -12pt               % at left and on top
 
 \oddsidemargin 0.5in           % Additional left margin on odd-numbered pages (was 0.375in)
                                % Total left margin: 1in + 0.5in = 1.5in
@@ -84,15 +84,18 @@
 %\topmargin 0.6875in           % Additional top margin (to the top of the header).
                                % Header height and header separator add 0.5in 
                                % Total top margin: 1in + 0.5in = 1.5in
+\topmargin 0in
 
 \headheight 12pt               % Header for numbering and running titles.
 \headsep 24pt                  % Separator between header and text.
 
 \textheight 8.5in              % Leaves 1.0in bottom margin (was 8.4in)
 
-\footskip 0.4in                % Distance from bottom of text to bottom of foot,
+% \footskip 0.4in                % Distance from bottom of text to bottom of foot,
                                % which is where page number goes for preliminary
                                % pages. Hence number will be 0.6" from bottom.
+
+\footskip 0.25in
 
 % "Double-space all textual material and all preliminary pages.
 % Footnotes and long quotations may be single-spaced"
